--- a/index.html
+++ b/index.html
@@ -53,9 +53,10 @@
     </div>
 
     <h2>Authors</h2>
-<p>Gelnior<br/>      </p>
+<p>Gelnior
+<br/>      </p>
 <h2>Contact</h2>
-<p>Gelnior<br/>      </p>
+<p><a href="http://groups.google.com/group/newebe"> http://groups.google.com/group/newebe</a></p>
 
 
     <h2>Download</h2>
