--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 	<style type="text/css">
 		body {
   		margin-top: 1.0em;
-  		background-color: #000000;
-		  font-family: "Helvetica,Arial,FreeSans";
-  		color: #ffffff;
+  		background-color: white;
+		  font-family: "FreeSans, Helvetica,, Arial";
+  		color: black;
     }
     #container {
       margin: 0 auto;
@@ -45,8 +45,8 @@
         <img border="0" width="90" src="http://github.com/images/modules/download/tar.png"></a>
     </div>
 
-    <h1><a href="http://github.com/gelnior/newebe">newebe</a>
-      <span class="small">by <a href="http://github.com/gelnior">gelnior</a></span></h1>
+    <h1><a href="http://github.com/gelnior/newebe">newebe</a></h1>
+    <h2>Get the data back home</h2>
 
     <div class="description">
       (Almost) Distributed social platform
