update newebe home page

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		body {
   		margin-top: 1.0em;
   		background-color: white;
-		  font-family: "FreeSans, Helvetica,, Arial";
+		  font-family: "sans-serif, Helvetica,, Arial";
   		color: black;
     }
     #container {
@@ -52,12 +52,19 @@
       (Almost) Distributed social platform
     </div>
 
-    <h2>Authors</h2>
-<p>Gelnior
-<br/>      </p>
 <h2>Contact</h2>
 <p><a href="http://groups.google.com/group/newebe"> http://groups.google.com/group/newebe</a></p>
 
+    <h2>Newebe is...</h2>
+<p>a web application</p>
+<p>a social tool to share data with contacts or friends.</p>
+<p>self-hosted</p>
+<p>Mono-user</p>
+
+    <h2>What is not Newebe</h2>
+<p>A web application available on a public website.</p>
+<p>A Jabber server</p>
+<p>A Facebook like</p>
 
     <h2>Download</h2>
     <p>
@@ -76,6 +83,8 @@
 
   </div>
 
+    <h2>Authors</h2>
+<p>Gelnior</p>
   
 </body>
 </html>
