--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 <p>self-hosted</p>
 <p>Mono-user</p>
 
-    <h2>What is not Newebe</h2>
+    <h2>Newebe is not...</h2>
 <p>A web application available on a public website.</p>
 <p>A Jabber server</p>
 <p>A Facebook like</p>
@@ -78,7 +78,7 @@
     </p>
 
     <div class="footer">
-      get the source code on GitHub : <a href="http://github.com/gelnior/newebe">gelnior/newebe</a>
+      More info on the <a href="http://github.com/gelnior/newebe">wiki</a> (written in French)
     </div>
 
   </div>
