--- a/index.html
+++ b/index.html
@@ -56,16 +56,18 @@
 <p><a href="http://groups.google.com/group/newebe"> http://groups.google.com/group/newebe</a></p>
 
     <h2>Newebe is...</h2>
-<p>a web application</p>
-<p>a social tool to share data with contacts or friends.</p>
-<p>self-hosted</p>
-<p>Mono-user</p>
-
+<ul>
+<li>a web application</li>
+<li>a social tool to share data with contacts or friends.</li>
+<li>self-hosted</li>
+<li>Mono-user</li>
+</ul>
     <h2>Newebe is not...</h2>
-<p>A web application available on a public website.</p>
-<p>A Jabber server</p>
-<p>A Facebook like</p>
-
+<ul>
+<li>A web application available on a public website.</li>
+<li>A Jabber server</li>
+<li>A Facebook like</li>
+</ul>
     <h2>Download</h2>
     <p>
       You can download this project in either
@@ -78,13 +80,10 @@
     </p>
 
     <div class="footer">
-      More info on the <a href="http://github.com/gelnior/newebe">wiki</a> (written in French)
+      More info in the <a href="http://github.com/gelnior/newebe">wiki</a> (written in French)
     </div>
 
   </div>
 
-    <h2>Authors</h2>
-<p>Gelnior</p>
-  
 </body>
 </html>
