--- a/index.html
+++ b/index.html
@@ -57,16 +57,16 @@
 
     <h2>Newebe is...</h2>
 <ul>
+<li>a social tool to share data with contacts or friends</li>
 <li>a web application</li>
-<li>a social tool to share data with contacts or friends.</li>
 <li>self-hosted</li>
-<li>Mono-user</li>
+<li>mono-user</li>
 </ul>
     <h2>Newebe is not...</h2>
 <ul>
-<li>A web application available on a public website.</li>
-<li>A Jabber server</li>
-<li>A Facebook like</li>
+<li>a web application to be hosted as a public website</li>
+<li>a Jabber server</li>
+<li>a Facebook like</li>
 </ul>
     <h2>Download</h2>
     <p>
@@ -78,6 +78,11 @@
       by running:
       <pre>$ git clone git://github.com/gelnior/newebe</pre>
     </p>
+
+    <h2>Based on</h2>
+<a href="http://www.djangoproject.com/"><img src="http://media.djangoproject.com/img/badges/djangoproject120x25_grey.gif" border="0" alt="A Django project." title="A Django project." /></a>
+<a href="http://couchdb.apache.org/"><img src="https://svn.apache.org/repos/asf/couchdb/supplement/logo/couchdb-logo.png" /></a>
+<a href="http://jashkenas.github.com/coffee-script/"><img src="http://jashkenas.github.com/coffee-script/documentation/images/logo.png" /></a>
 
     <div class="footer">
       More info in the <a href="http://github.com/gelnior/newebe">wiki</a> (written in French)
