--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
     .download { float: right; }
 		pre { background: #000; color: white; padding: 15px;}
     hr { border: 0; width: 80%; border-bottom: 1px solid #aaa}
-    .footer { text-align:center; padding-top:30px; font-style: italic; }
+    .footer { text-align:center; padding-top:30px; font-style: italic; }*
+   img { border: 0; }
 	</style>
 	
 </head>
