--- a/index.html
+++ b/index.html
@@ -1,37 +1,37 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
-	"http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+"http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
-	<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 
-	<title>gelnior/newebe @ GitHub</title>
-	
-	<style type="text/css">
-		body {
-  		margin-top: 1.0em;
-  		background-color: white;
-		  font-family: "sans-serif, Helvetica,, Arial";
-  		color: black;
+<title>Newebe : get the data back home</title>
+
+<style type="text/css">
+body {
+   margin-top: 1.0em;
+   background-color: white;
+   font-family: "sans-serif";
+   color: black;
     }
     #container {
       margin: 0 auto;
       width: 700px;
     }
-		h1 { font-size: 3.8em; color: black; margin-bottom: 3px; }
-		h1 .small { font-size: 0.4em; }
-		h1 a { text-decoration: none }
-		h2 { font-size: 1.5em; color: black; }
+h1 { font-size: 3.8em; color: black; margin-bottom: 3px; }
+h1 .small { font-size: 0.4em; }
+h1 a { text-decoration: none }
+h2 { font-size: 1.5em; color: black; }
     h3 { text-align: center; color: black; }
     a { color: black; }
     .description { font-size: 1.2em; margin-bottom: 30px; margin-top: 30px; font-style: italic;}
     .download { float: right; }
-		pre { background: #000; color: white; padding: 15px;}
+pre { background: #000; color: white; padding: 15px;}
     hr { border: 0; width: 80%; border-bottom: 1px solid #aaa}
     .footer { text-align:center; padding-top:30px; font-style: italic; }*
    img { border: 0; }
-	</style>
-	
+</style>
+
 </head>
 
 <body>
@@ -39,22 +39,14 @@
 
   <div id="container">
 
-    <div class="download">
-      <a href="http://github.com/gelnior/newebe/zipball/master">
-        <img border="0" width="90" src="http://github.com/images/modules/download/zip.png"></a>
-      <a href="http://github.com/gelnior/newebe/tarball/master">
-        <img border="0" width="90" src="http://github.com/images/modules/download/tar.png"></a>
-    </div>
 
-    <h1><a href="http://github.com/gelnior/newebe">newebe</a></h1>
+    <h1><a href="http://github.com/gelnior/newebe">Newebe</a></h1>
     <h2>Get the data back home</h2>
 
     <div class="description">
       (Almost) Distributed social platform
     </div>
 
-<h2>Contact</h2>
-<p><a href="http://groups.google.com/group/newebe"> http://groups.google.com/group/newebe</a></p>
 
     <h2>Newebe is...</h2>
 <ul>
@@ -80,16 +72,32 @@
       <pre>$ git clone git://github.com/gelnior/newebe</pre>
     </p>
 
-    <h2>Based on</h2>
-<a href="http://www.djangoproject.com/"><img src="http://media.djangoproject.com/img/badges/djangoproject120x25_grey.gif" border="0" alt="A Django project." title="A Django project." /></a>
-<a href="http://couchdb.apache.org/"><img src="https://svn.apache.org/repos/asf/couchdb/supplement/logo/couchdb-logo.png" /></a>
-<a href="http://jashkenas.github.com/coffee-script/"><img src="http://jashkenas.github.com/coffee-script/documentation/images/logo.png" /></a>
+<h2>Contact</h2>
+<p>
+  <a href="http://groups.google.com/group/newebe">
+    http://groups.google.com/group/newebe
+  </a>
+  </p>
+
+  <h2>Powered by...</h2>
+  <a href="http://www.djangoproject.com/">
+  <img src="http://media.djangoproject.com/img/badges/djangopowered126x54.gif" 
+       border="0" alt="Django" title="Powered by Django." />
+  </a><br />
+  <a href="http://couchdb.apache.org/">
+      <img src="https://svn.apache.org/repos/asf/couchdb/supplement/logo/couchdb-logo.png" alt="Couchdb"/>
+  </a><br />
+  <a href="http://jashkenas.github.com/coffee-script/">
+      <img src="http://jashkenas.github.com/coffee-script/documentation/images/logo.png" alt="Coffee Script"/>
+  </a><br />
+  <a href="http://documentcloud.github.com/backbone/">
+      <img src="http://documentcloud.github.com/backbone/docs/images/backbone.png" 
+           alt="Backbone JS"/>
+  </a>
 
     <div class="footer">
-      More info in the <a href="http://github.com/gelnior/newebe">wiki</a> (written in French)
+      Check the <a href="http://github.com/gelnior/newebe">wiki</a> for more (written in French)
     </div>
-
-  </div>
 
 </body>
 </html>
