--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@ pre { background: #000; color: white; padding: 15px;}
 <li>a web application</li>
 <li>self-hosted</li>
 <li>mono-user</li>
+<li>a free software</li>
 </ul>
     <h2>Newebe is not...</h2>
 <ul>
