--- a/index.html
+++ b/index.html
@@ -80,6 +80,11 @@ pre { background: #000; color: white; padding: 15px;}
   </a>
   </p>
 
+<h2>Warning</h2>
+<p>
+Newebe is in its early stage of development. For now, it is only a prototype without security features. Use it just for fun but don't expect reliability from it.
+  </p>
+
   <h2>Powered by...</h2>
   <a href="http://www.djangoproject.com/">
   <img src="http://media.djangoproject.com/img/badges/djangopowered126x54.gif" 
