--- a/index.html
+++ b/index.html
@@ -24,7 +24,6 @@ h1 a { text-decoration: none }
 h2 { font-size: 1.5em; color: black; }
     h3 { text-align: center; color: black; }
     a { color: black; }
-    .description { font-size: 1.2em; margin-bottom: 30px; margin-top: 30px; font-style: italic;}
     .download { float: right; }
 pre { background: #000; color: white; padding: 15px;}
     hr { border: 0; width: 80%; border-bottom: 1px solid #aaa}
@@ -62,6 +61,9 @@ pre { background: #000; color: white; padding: 15px;}
 <li>a Jabber server</li>
 <li>a Facebook like</li>
 </ul>
+
+    <h2>Screenshots</h2>
+
     <h2>Download</h2>
     <p>
       You can download this project in either
