Add installation section to website

--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@ pre { background: #000; color: white; padding: 15px;}
 </ul>
 
     <h2>Screenshots</h2>
+    <h2>Installation</h2>
 
     <h2>Download</h2>
     <p>
