--- a/index.html
+++ b/index.html
@@ -28,7 +28,10 @@ h2 { font-size: 1.5em; color: black; }
 pre { background: #000; color: white; padding: 15px;}
     hr { border: 0; width: 80%; border-bottom: 1px solid #aaa}
     .footer { text-align:center; padding-top:30px; font-style: italic; }*
-   img { border: 0; }
+    img { border: 0; }
+    
+span.step { font-weight: bold; color: #555; font-size: 0.8em; 
+                margin-right: 10px;}
 </style>
 
 </head>
@@ -62,10 +65,8 @@ pre { background: #000; color: white; padding: 15px;}
 <li>a Facebook like</li>
 </ul>
 
-    <h2>Screenshots</h2>
-    <h2>Installation</h2>
-
-    <h2>Download</h2>
+  <h2>Screenshots</h2>
+     <h2>Download</h2>
     <p>
       You can download this project in either
       <a href="http://github.com/gelnior/newebe/zipball/master">zip</a> or
@@ -76,17 +77,92 @@ pre { background: #000; color: white; padding: 15px;}
       <pre>$ git clone git://github.com/gelnior/newebe</pre>
     </p>
 
-<h2>Contact</h2>
-<p>
-  <a href="http://groups.google.com/group/newebe">
-    http://groups.google.com/group/newebe
-  </a>
-  </p>
+    <h2>Contact</h2>
+    <p>
+      <a href="http://groups.google.com/group/newebe">
+        http://groups.google.com/group/newebe
+      </a>  
+    </p>
 
-<h2>Warning</h2>
+    <h2>Documentation</h2>
+<a href="http://github.com/gelnior/newebe">wiki</a> 
+    <h2>Installation</h2>
+    <h3>Dependencies</h3>
+    <ul>
+        <li>Python &lt; 2.6</li>
+        <li>Django &lt;= 1.2</li>
+        <li>Couchdb &lt;= 0.11.0</li>
+        <li>Coucdbkit &lt;= 0.4.8</li>
+        <li>Tornado &lt;= 1.2.0</li>
+        <li>Pycurl &lt;= 1.0.0</li>
+        <li>Daemon &lt;= 1.0.0</li>
+    </ul>
+    <h3>Procedure</h3>
 <p>
-Newebe is in its early stage of development. For now, it is only a prototype without security features. Use it just for fun but don't expect reliability from it.
-  </p>
+<span class="step"> step 1 </span> Install following packages :
+</p>
+<pre>
+  python python-setuptools python-pycurl python-daemon couchdb git
+</pre>
+<p>
+Via easy_install install <em>couchdbkit</em>, <em>django</em> and 
+<em>tornado</em> :
+</p>
+<pre>
+  easy_install couchdbkit django tornado
+</pre>
+<p>
+<span class="step"> step 2 </span> Get <em>Newebe</em> from <em>Github</em> or 
+unpack the downloaded archive:
+</p>
+<pre>
+  git clone git://github.com/gelnior/newebe.git
+</pre>
+<p>
+<span class="step"> step 3 </span> Ensure database is started, then in
+<em>Newebe</em> directory execute
+following command to configure database :
+</p>
+<pre>
+  python manage.py sync_couchdb
+</pre>
+<p>
+<span class="step"> step 4 </span>  Update deployment file 
+(<em>deploy/newebe</em>) by changing 
+<em>NEWEBE_PATH</em> and PIDFILE constants to make it point to your 
+<em>Newebe</em> directory (pid file will be created at first startup).
+</p>
+<p>
+<span class="step"> step 4 bis </span> To change database name or port change 
+constants sets in
+<em>settings.py</em> file : <em>TORNADO_PORT</em> and 
+<em>COUCHDB_DB_NAME</em>. Default port is
+8000 and default database name is <em>newebe</em>.
+</p>
+<p>
+<span class="step"> step 5 </span> Copy file <em>deploy/newebe</em> in the 
+folder <em>/etc/init.d/</em> then give it execution rights.
+</p>
+<pre>
+  cp deploy/newebe /etc/init.d
+  chmod +x /etc/init.d/newebe
+</pre>
+<p>
+<span class="step"> step 6 </span> Start <em>Newebe</em> server.
+</p>
+<pre>
+  /etc/init.d/newebe start
+</pre>
+<p>
+<span class="step"> step 7</span> Check that everything is fine via your web 
+   browser : go to the URL
+  <em>http://localhost:port/</em> (remplace port by <em>TORNADO_PORT</em> 
+  value, default is 8000). 
+</p>
+     <h2>Warning</h2>
+    <p>
+        Newebe is in its early stage of development. For now, it is only a prototype without security features. Use it just for fun but don't expect reliability from it.
+    </p>
  
   <h2>Powered by...</h2>
   <h3>Server side</h3>
@@ -107,10 +183,6 @@ Newebe is in its early stage of development. For now, it is only a prototype wit
       <img src="images/backbonepowered.png" 
            alt="Backbone JS"/>
   </a>
-
-    <div class="footer">
-      Check the <a href="http://github.com/gelnior/newebe">wiki</a> for more (written in French)
-    </div>
 
 </body>
 </html>
