add styling for main title

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@ body {
 #container {
    margin: 0 auto;
    width: 700px;none }
+h1 { font-size: 3.8em; color: black; margin-bottom: 3px; }
 h2 { font-size: 1.5em; color: black; }
 h3 { color: black; }
 a { color: black; font-weight: bold; text-decoration: none;}
