--- a/index.html
+++ b/index.html
@@ -94,13 +94,13 @@ span.step { font-weight: bold; color: #555; font-size: 0.8em;
     <h2>Installation</h2>
     <h3>Dependencies</h3>
     <ul>
-        <li>Python &lt; 2.6</li>
-        <li>Django &lt;= 1.2</li>
-        <li>Couchdb &lt;= 0.11.0</li>
-        <li>Coucdbkit &lt;= 0.4.8</li>
-        <li>Tornado &lt;= 1.2.0</li>
-        <li>Pycurl &lt;= 1.0.0</li>
-        <li>Daemon &lt;= 1.0.0</li>
+        <li>Python &gt; 2.6</li>
+        <li>Django &gt;= 1.2</li>
+        <li>Couchdb &gt;= 0.11.0</li>
+        <li>Coucdbkit &gt;= 0.4.8</li>
+        <li>Tornado &gt;= 1.2.0</li>
+        <li>Pycurl &gt;= 1.0.0</li>
+        <li>Daemon &gt;= 1.0.0</li>
     </ul>    
     <h3>Procedure</h3>
     <p>
