--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@ span.step { font-weight: bold; color: #555; font-size: 0.8em;
     <img src="images/djangopowered.gif" alt="Django" 
          title="Powered by Django."/>
     </a>
-    <h3>Client is powered y...</h3>
+    <h3>Client is powered by...</h3>
     <a  href="http://jashkenas.github.com/coffee-script/" 
         style="margin-right: 10px;">
         <img src="images/coffeescriptpowered.png" alt="Coffee Script"/>
