--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@ span.step { font-weight: bold; color: #555; font-size: 0.8em;
     <h3>Commit policy</h3>
     <p>
     Before starting any development, please inform me via the mailing list.
-    It could save you time and will makes integration easier for me.
+    It could save you time and will make integration easier.
     Then fork the code from github, code and make a pull request with comments
     about what you did.
     </p>
