Adding super user section to contact page

--- a/index.html
+++ b/index.html
@@ -258,6 +258,12 @@ span.step { font-weight: bold; color: #555; font-size: 0.8em;
         http://groups.google.com/group/newebe
       </a>  
     </p>
+
+    <h3>Super-users</h3>
+    <p>Thatoo : thatooleprette [ at ] wanadoo . fr</p>
+    <p>Piour : piour [ at ] free . fr</p>
+
+
     <h3>Author</h3>
     <p>Gelnior : gelnior [ at ] free . fr</p>
     </div>
