Add markdown to depedencies

--- a/index.html
+++ b/index.html
@@ -173,6 +173,7 @@ span.step { font-weight: bold; color: #555; font-size: 0.8em;
         <li>Tornado &gt;= 1.2.0</li>
         <li>Pycurl &gt;= 1.0.0</li>
         <li>Daemon &gt;= 1.0.0</li>
+        <li>Markdown &gt;= 2.0.0</li>
     </ul>    
     <h3>Procedure</h3>
     <p>
@@ -185,7 +186,7 @@ span.step { font-weight: bold; color: #555; font-size: 0.8em;
         <em>tornado</em> :
     </p>
     <pre>
- easy_install couchdbkit django tornado </pre>
+ easy_install couchdbkit django tornado markdown</pre>
     <p>
         <span class="step"> step 2 </span> Get <em>Newebe</em> from 
         <em>Github</em> or unpack the downloaded archive:
