adding creative common license, code cleaning

--- a/index.html
+++ b/index.html
@@ -18,32 +18,30 @@
   <div id="container">
       
     <h1>
-    <a href="http://newebe.org/">
+      <a href="http://newebe.org/">
         <img id="logo" src="images/newebe_logo_birds.jpg" alt="Newebe"/>
-    </a>
+      </a>
     </h1>
       
     <div id="download">
-        <p>
-        <h2 id="slogan">feel free to share</h2>
-        <div class="description" >
-      Growth of web applications has been a huge improvement for social 
-      sharing and collaborative work. Unfortunately, to enjoy these new tools,
-      we have traded our privacy. Newebe aims to solve this problem
-      by providing web applications you host at your home and that connect
-      to your contacts.
-  </div>
+      <h2 id="slogan">feel free to share</h2>
+      <div class="description" >
+        Growth of web applications has been a huge improvement for social 
+        sharing and collaborative work. Unfortunately, to enjoy these new tools,
+        we have traded our privacy. Newebe aims to solve this problem
+        by providing web applications you host at your home and that connect
+        to your contacts.
+      </div>
       <div id="download-text">
         Download 
         <a href="https://github.com/downloads/gelnior/newebe/newebe-0.1.0.zip">
-            newebe 0.1.0</a>
-        </p>
-       </div>
-       <p id="disclaimer">warning: newebe is not production ready.</p>
+            newebe 0.1.0
+        </a>
+      </div>
+      <p id="disclaimer">warning: newebe is not production ready.</p>
     </div>
 
-
-    <div style="clear: both; margin: 0; padding: 0"></div>
+    <div class="spacer"></div>
 
     <ul id="menu">
         <li><a id="menu-home" href="#home">home</></li>
@@ -180,6 +178,11 @@
 
     <h3>Drawings</h3>
     <p>Stella :  salumaastella [ at ] gmail . com</p>
+    <p>All artworks are set under 
+      <a href="http://creativecommons.org/licenses/by-nc-sa/3.0/">
+        Creative Commons License nc-by-sa 3.0
+      </a>
+    </p>
     </div>
 
 
