--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
 <head>
     
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+<link REL="shortcut icon" HREF="images/favicon.ico">
 <link href="newebe.css" rel="stylesheet"
-      type="text/css" media="screen" />
+type="text/css" media="screen" />
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js">
 </script>
 <title>Newebe | feel free to share</title>
