Remove django under the hood and add meta description

--- a/index.html
+++ b/index.html
@@ -5,6 +5,16 @@
 <head>
     
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+<meta name="keywords" content="social networks, social, self-hosted, 
+                               distributed, free, tornado, couchdb, 
+                               coffescript, backbonejs" /> 
+<meta name="description" content="
+        Growth of web applications has been a huge improvement for social 
+        sharing and collaborative work. Unfortunately, to enjoy these new tools,
+        we have traded our privacy. Newebe aims to solve this problem
+        by providing web applications you host at your home and that connect
+        to your contacts.
+" />
 <link REL="shortcut icon" HREF="images/favicon.ico">
 <link href="newebe.css" rel="stylesheet"
 type="text/css" media="screen" />
@@ -190,11 +200,6 @@ type="text/css" media="screen" />
 
     <div id="developers">
      <h2>Developers</h2>
-    <!--p>
-      You can download this project in either
-      <a href="http://github.com/gelnior/newebe/zipball/master">zip</a> or
-      <a href="http://github.com/gelnior/newebe/tarball/master">tar</a> formats.
-    </p-->
     <h3>Get the code</h3>
     <p>You can clone the project with <a href="http://git-scm.com">Git</a>
       by running:
@@ -250,10 +255,6 @@ type="text/css" media="screen" />
     </a>
     <a href="http://couchdb.apache.org/" style="margin-right: 10px;">
         <img src="images/couchdbpowered.png" alt="Couchdb"/>
-    </a>
-    <a href="http://www.djangoproject.com/">
-    <img src="images/djangopowered.gif" alt="Django" 
-         title="Powered by Django."/>
     </a>
     <h3>Client is powered by...</h3>
     <a  href="http://jashkenas.github.com/coffee-script/" 
