add more screenshots

--- a/index.html
+++ b/index.html
@@ -76,9 +76,19 @@ type="text/css" media="screen" />
     <ul>
         <li>a web application to be hosted as a public website</li>
     </ul>
-    <h2>Screenshot</h2>
-    <img src="images/screenshot-news-thumb.jpg" alt="Newebe screenshot"/>
-
+    <h2>Screenshots</h2>
+    <h3>microblogging</h3>
+    <img src="images/newebe_screen_01.jpg" 
+         alt="Newebe screenshot - microblogging"/>
+    <h3>notes</h3>
+    <img src="images/newebe_screen_02.jpg" 
+         alt="Newebe screenshot - notes"/>
+    <h3>contacts</h3>
+    <img src="images/newebe_screen_03.jpg" 
+         alt="Newebe screenshot - contacts"/>
+    <h3>activity stream</h3>
+    <img src="images/newebe_screen_04.jpg" 
+         alt="Newebe screenshot - activity stream"/>
     </div>
 
     <div id="installation">
