change thatoo email

--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@ type="text/css" media="screen" />
       </div>
       <div id="download-text">
         Download 
-        <a href="https://github.com/downloads/gelnior/newebe/newebe-0.2.0.zip">
-            newebe 0.2.0
+        <a href="https://github.com/downloads/gelnior/newebe/newebe-0.3.0.zip">
+            newebe 0.3.0
         </a>
       </div>
       <p id="disclaimer">warning: newebe is not production ready.</p>
@@ -68,7 +68,7 @@ type="text/css" media="screen" />
     <ul>
         <li>a social tool to share data with contacts or friends</li>
         <li>a web application</li>
-        <li>self-hosted</li>
+        <li>an application you host at your home</li>
         <li>mono-user</li>
         <li>a free software</li>
     </ul>
@@ -211,7 +211,7 @@ type="text/css" media="screen" />
     </p>
 
     <h3>Super-users</h3>
-    <p>Thatoo : thatooleprette [ at ] wanadoo . fr</p>
+    <p>Thatoo : thatooleprette [ at ] gmail . com</p>
     <p>Piour : piour [ at ] free . fr</p>
 
 
