Add URL and contact concepts to documentation

--- a/index.html
+++ b/index.html
@@ -190,13 +190,34 @@ type="text/css" media="screen" />
 
     <div id="documentation">
     <h2>Documentation</h2>
+    <h3>Main concepts</h3>
     <p>
-    Tutorial are displayed when you first use newebe to help you
+    Actually the usage of Newebe is quite simple. Once you understand the
+    notions of URL and contacts, everything is easy.     
+    </p>
+    <p><strong>URL</strong> is the URL which you used to connect to
+    your Newebe. Your contacts need it to know where they have to send
+    their data when they want to reach you. 
+    When you add contacts you give them your URL. That's why you have to 
+    register it the first time you connect to your Newebe. <br />
+    Newebe URL looks like this: <br />
+    <i>http://www.myurl.com:8000/</i> or <i>http://80.23.143.123:7500/</i> 
+    depending if you have a subdomain linked to your Newebe and the port on 
+    which Newebe is set up.
+    </p>
+    <p><strong>Contact</strong> A contact is described by its URL. At this
+    URL lives its Newebe. So to add a friend in your contact list, you need to 
+    add the URL of its Newebe to your contact list.
+    </p>
+    <h3>Tutorials</h3>
+    <p>
+    Tutorials are displayed when you first use newebe to help you
     understand the way it works. You just have to start using it, newebe will
     tell you what to do.
-    </p>    
+    </p>
+    <h3>More</h3>
     <p> For more informations about Newebe you can check the 
-    <a href="http://github.com/gelnior/newebe">wiki</a> (French only).
+    <a href="http://github.com/gelnior/newebe">wiki</a>.
     </p>
     </div>
 
