--- a/index.html
+++ b/index.html
@@ -102,6 +102,7 @@ type="text/css" media="screen" />
         <li>Pycurl &gt;= 1.0.0</li>
         <li>Daemon &gt;= 1.0.0</li>
         <li>Markdown &gt;= 2.0.0</li>
+        <li>PIL &gt;= 1.1.6</li>
     </ul>    
     <h3>Procedure (For Debian 6.0)</h3>
     <p>
@@ -109,7 +110,7 @@ type="text/css" media="screen" />
     (<em>Git</em>, <em>Python & tools</em> and <em>CouchDB</em>), prefixed it with <em>sudo</em> if needed :
     </p>
     <pre>
- apt-get install python python-setuptools python-pycurl python-daemon couchdb git</pre>
+ apt-get install python python-setuptools python-pycurl python-daemon python-imaging couchdb git </pre>
     <p>
         Via easy_install install <em>couchdbkit</em>, <em>markdown</em> and 
         <em>tornado</em> :
