make introduction clearer  and add Pictures app screenshot

--- a/index.html
+++ b/index.html
@@ -64,22 +64,40 @@ type="text/css" media="screen" />
     </ul>
 
     <div id="home">
-    <h2>Newebe is...</h2>
-    <ul>
-        <li>a social tool to share data with contacts or friends</li>
-        <li>a web application</li>
-        <li>an application you host at your home</li>
-        <li>mono-user</li>
-        <li>a free software</li>
-    </ul>
-    <h2>Newebe is not...</h2>
-    <ul>
-        <li>a web application to be hosted as a public website</li>
-    </ul>
+
+    <h2>Newebe is a distributed social network</h2>
+
+    <div class="feature feature-left">
+      <h3>Share</h3>
+      <p>Share your thoughts, your links and your pictures.</p>
+    </div>
+
+    <div class="feature feature-right">
+      <h3>Owns</h3>
+      <p>Each user hosts his Newebe instance, you keep your data at home.</p>
+    </div>
+
+    <div class="feature feature-left">
+      <h3>Fast</h3>
+      <p>Newebe does not need to handle millions of connections, 
+         he just serves you.
+      </p>
+    </div>
+
+    <div class="feature feature-right">
+      <h3>Free</h3>
+      <p>Newebe is a free software, you keep control on it.</p>  
+    </div>
+
+    <div class="spacer"></div>
+
     <h2>Screenshots</h2>
     <h3>microblogging</h3>
     <img src="images/newebe_screen_01.jpg" 
          alt="Newebe screenshot - microblogging"/>
+    <h3>pictures</h3>
+    <img src="images/newebe_screen_pictures.jpg" 
+         alt="Newebe screenshot - pictures"/>
     <h3>notes</h3>
     <img src="images/newebe_screen_02.jpg" 
          alt="Newebe screenshot - notes"/>
